fix: wrap directory tabs and search in shared sticky shell

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -128,6 +128,7 @@
     color: white;
   }
 
+  .directory-sticky-shell,
   .directory-search,
   .directory-search.is-sticky {
     background-color: white;
@@ -142,6 +143,7 @@
     color: #fff;
   }
 
+  .directory-sticky-shell,
   .directory-tabs,
   .settings-tabs,
   .inbox-tabs-nav {
@@ -647,6 +649,7 @@
     filter: brightness(1.5);
   }
 
+  .directory-sticky-shell,
   .directory-search,
   .directory-search.is-sticky {
     background-color: var(--color-dark-bg-alt);
@@ -656,6 +659,7 @@
     border-bottom: var(--border-dark-1);
   }
 
+  .directory-sticky-shell,
   .directory-tabs,
   .settings-tabs,
   .inbox-tabs-nav {
@@ -2415,6 +2419,20 @@ textarea#bio {
   align-items: center;
 }
 
+.directory-sticky-shell {
+  width: calc(100% + (2 * var(--container-padding, 2rem)));
+  margin-left: calc(-1 * var(--container-padding, 2rem));
+  margin-right: calc(-1 * var(--container-padding, 2rem));
+  box-sizing: border-box;
+}
+
+.directory-sticky-shell > .directory-tabs,
+.directory-sticky-shell > .directory-search {
+  padding-left: var(--container-padding, 2rem);
+  padding-right: var(--container-padding, 2rem);
+  box-sizing: border-box;
+}
+
 .directory-tabs {
   display: flex;
   align-items: center;
@@ -2440,22 +2458,7 @@ textarea#bio {
   padding-bottom: 1rem;
 }
 
-.directory-tabs.is-sticky {
-  width: calc(100% + (2 * var(--container-padding, 2rem)));
-  margin-left: calc(-1 * var(--container-padding, 2rem));
-  margin-right: calc(-1 * var(--container-padding, 2rem));
-  padding-left: var(--container-padding, 2rem);
-  padding-right: var(--container-padding, 2rem);
-  box-sizing: border-box;
-}
-
 .directory-search.is-sticky {
-  width: calc(100% + (2 * var(--container-padding, 2rem)));
-  margin-left: calc(-1 * var(--container-padding, 2rem));
-  margin-right: calc(-1 * var(--container-padding, 2rem));
-  padding-left: var(--container-padding, 2rem);
-  padding-right: var(--container-padding, 2rem);
-  box-sizing: border-box;
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
@@ -2695,23 +2698,6 @@ input#captcha_answer {
     --container-padding: 1.25rem;
     min-width: initial;
     padding: 2rem var(--container-padding);
-  }
-
-  .directory-tabs.is-sticky {
-    width: calc(100% + 2.5rem);
-    margin-left: -1.25rem;
-    margin-right: -1.25rem;
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-  }
-
-  .directory-search.is-sticky {
-    width: calc(100% + 2.5rem);
-    margin-left: -1.25rem;
-    margin-right: -1.25rem;
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-    padding: 1rem 1.25rem;
   }
 
   .emptyState {
@@ -4567,10 +4553,14 @@ button .badge {
 
 @media (max-width: 395px) {
   /* Stop the sticky container from being wider than the viewport */
-  .directory-tabs.is-sticky {
+  .directory-sticky-shell {
     width: 100%;
     margin-left: 0;
     margin-right: 0;
+  }
+
+  .directory-sticky-shell > .directory-tabs,
+  .directory-sticky-shell > .directory-search {
     padding-left: 0;
     padding-right: 0;
   }
